# meme-mcp

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml  ruff.toml
.github/workflows/: build-and-push.yml  ghcr-retention.yml
LICENSES/: MEMEGEN-MIT-LICENSE.txt  SIL-OFL-1.1.txt
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_vector_ddl.py  0003_google_pins.py  0004_oauth.py
assets/: memegen-enrichment.json  memegen-enrichment.zh-TW.json  memegen-seed-manifest.json
assets/golden/: parity-distances.json
deploy/: Dockerfile  docker-compose.test.yml  docker-compose.yml
docs/: ARCHITECTURE.md  MIGRATION.md
scripts/: meme-mcp-launch.sh
tests/: test_allowlist.py  test_app.py  test_audit.py  test_authorization.py  test_browse_pagination.py  test_cli.py  test_config.py  test_corpus_seed.py  test_csrf.py  test_deploy.py  test_drift_gate.py  test_embedding_meta.py  test_embeddings.py  test_embeddings_locales.py  test_envelope.py  test_gc_renders.py  test_github_oauth_client.py  test_google_oauth_session.py  test_google_pins.py  test_i18n_core.py  test_i18n_js_catalog.py  test_i18n_rendering.py  test_lang_switch.py  test_mcp_display.py  test_mcp_rate_limits.py  test_mcp_server.py  test_metadata_locales.py  test_migrate_cli.py  test_migrations.py  test_oauth_authorize_consent.py  test_oauth_front_door_contract.py  test_oauth_mcp_integration.py  test_oauth_provider.py  test_oauth_session.py  test_oauth_store.py  test_outcomes.py  test_pat.py  test_pat_capability_gates.py  test_pat_web.py  test_pending_uploads.py  (+29 more)
(+100 files in other folders)
